<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_will_do"
        android:layout_gravity="center"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <RadioButton
            android:id="@+id/delete_nahooi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_nahooi"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/izmenit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/izmenit"/>
    </RadioGroup>

</LinearLayout>