<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>
    <ScrollView android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/what_to_do_with_event"
                android:textSize="24sp"
                android:layout_margin="8dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="text1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:paddingLeft="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/we_will_call"/>
                <EditText
                    android:id="@+id/event_name_edit_text"
                    android:layout_marginRight="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/try_to_imagine"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:paddingLeft="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/what_wil_do"/>
                <EditText
                    android:id="@+id/what_to_do_edit_text"
                    android:layout_marginRight="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/we_will_do"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical">
                   <TextView
                       android:layout_margin="8dp"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/choose_date"
                       android:gravity="center"/>
                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal"
                       android:paddingLeft="8dp"
                       android:paddingRight="8dp">

                       <TextView
                           android:layout_width="24dp"
                           android:layout_height="wrap_content"
                           android:text="@string/from_text"
                           android:gravity="right"/>

                       <TextView

                           android:id="@+id/date_edit_from"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:ems="10"
                           android:layout_weight="1"
                           android:clickable="true"
                           android:focusable="true"
                           android:onClick="onclick_from"
                           android:gravity="center"
                           android:text="@string/dd_mm_yyyy"/>
                       <TextView
                           android:layout_width="24dp"
                           android:layout_height="wrap_content"
                           android:text="@string/until_text"
                           android:gravity="right"/>
                       <TextView

                           android:id="@+id/date_edit_to"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:ems="10"
                           android:layout_weight="1"
                           android:clickable="true"
                           android:focusable="false"
                           android:onClick="onclick_to"
                           android:gravity="center"
                           android:text="@string/dd_mm_yyyy"/>
                   </LinearLayout>
               </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/event_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="ОК"
        />


</LinearLayout>